--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "tenantable",
+  "name": "tenantable-personal-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "css-loader": "^0.28.11",
-    "node-sass": "^4.9.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "webpack": "^4.8.3"
   }
 }
